some styling changes

--- a/src/NetWorthView.css
+++ b/src/NetWorthView.css
@@ -26,3 +26,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.editableValue {
+    color: red;
+}
+
+.calculatedValue {
+    color: green;
+}
+
+.sectionHeading {
+    color: green;
+}
