--- a/src/NetWorthView.css
+++ b/src/NetWorthView.css
@@ -1,4 +1,5 @@
-.App {
+.nwv-title {
+    text-align: center
 }
 
 .nwv-table {
@@ -34,4 +35,8 @@
 .nwv-select-currency-row {
     text-align: right;
     padding-right: 20px
+}
+
+.nwv-future-net-worth-chart {
+    text-align: center
 }
